--- a/package.json
+++ b/package.json
@@ -5,87 +5,58 @@
   "main": "./dist/index.js",
   "author": "Daniel Main",
   "license": "MIT",
-  "os": ["darwin", "linux", "win32"],
-  "cpu": ["x64", "arm64"],
+  "os": [
+    "darwin",
+    "linux",
+    "win32"
+  ],
+  "cpu": [
+    "x64",
+    "arm64"
+  ],
   "nixos": {
     "recommended": {
       "config": {
         "security.polkit.enable": true,
-        "environment.systemPackages": ["polkit"]
+        "environment.systemPackages": [
+          "polkit"
+        ]
       }
     }
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:danielmain/electron-sudo-universal.git"
-  },
-  "keywords": [
-    "sudo",
-    "os",
-    "dialog",
-    "prompt",
-    "command",
-    "exec",
-    "ui",
-    "electron",
-    "elevate",
-    "administrative",
-    "privileges",
-    "UAC",
-    "subprocess"
-  ],
-  "bugs": {
-    "url": "https://github.com/danielmain/electron-sudo-universal/issues"
-  },
-  "homepage": "https://github.com/danielmain/electron-sudo-universal#readme",
   "scripts": {
-    "build": "node_modules/webpack/bin/webpack.js --config ./webpack/config.babel.js",
-    "build-win32": "node node_modules\\webpack\\bin\\webpack.js --config webpack\\config.babel.js",
-    "prepublish": "npm run test",
-    "lint": "node_modules/eslint/bin/eslint.js -c .eslintrc ./src",
-    "test-win32": "npm run build-win32 && node node_modules\\mocha\\bin\\mocha --compilers js:babel-core/register tests",
-    "test": "npm run build && node_modules/mocha/bin/mocha --compilers js:babel-core/register ./tests"
+    "clean": "rimraf dist",
+    "prebuild": "npm run clean",
+    "build": "webpack",
+    "build-win32": "webpack",
+    "prepare": "npm run build",
+    "lint": "eslint src --ext .ts",
+    "test": "mocha --require ts-node/register 'tests/**/*.ts'",
+    "test-win32": "npm run build-win32 && npm run test"
   },
   "devDependencies": {
-    "babel-cli": "^6.10.1",
-    "babel-core": "^6.10.4",
-    "babel-eslint": "^6.0.0",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-array-includes": "^2.0.3",
-    "babel-plugin-lodash": "^2.2.1",
-    "babel-plugin-module-alias": "^1.2.0",
-    "babel-plugin-syntax-async-functions": "^6.5.0",
-    "babel-plugin-syntax-decorators": "^6.5.0",
-    "babel-plugin-syntax-flow": "^6.8.0",
-    "babel-plugin-syntax-object-rest-spread": "^6.5.0",
-    "babel-plugin-transform-async-to-module-method": "^6.7.0",
-    "babel-plugin-transform-class-properties": "^6.6.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-flow-strip-types": "^6.8.0",
-    "babel-plugin-transform-regenerator": "^6.6.5",
-    "babel-plugin-transform-runtime": "^6.6.0",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.9.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-runtime": "^6.9.2",
-    "chai": "^3.5.0",
-    "copy-webpack-plugin": "^3.0.1",
-    "dirty-chai": "^1.2.2",
-    "eslint": "^2.6.0",
-    "eslint-loader": "^1.3.0",
-    "eslint-plugin-babel": "^3.2.0",
-    "estraverse-fb": "^1.3.1",
-    "json-loader": "^0.5.4",
-    "mocha": "^2.4.5",
-    "raw-loader": "^0.5.1",
-    "source-map-support": "^0.4.0",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-module-hot-accept": "^1.0.4",
-    "webpack-shell-plugin": "^0.4.2"
+    "@types/bluebird": "^3.5.38",
+    "@types/chai": "^4.3.11",
+    "@types/dirty-chai": "^2.0.4",
+    "@types/mocha": "^10.0.6",
+    "@types/node": "^20.11.17",
+    "@typescript-eslint/eslint-plugin": "^7.0.1",
+    "@typescript-eslint/parser": "^7.0.1",
+    "chai": "^4.3.10",
+    "copy-webpack-plugin": "^12.0.2",
+    "dirty-chai": "^2.0.1",
+    "electron": "^28.0.0",
+    "eslint": "^8.56.0",
+    "mocha": "^10.3.0",
+    "rimraf": "^5.0.5",
+    "ts-loader": "^9.5.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
+    "webpack": "^5.90.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
-    "babel-runtime": "^6.18.0",
-    "bluebird": "^3.4.6"
+    "bluebird": "^3.7.2"
   }
 }
